Fix resume row spacing

--- a/style.css
+++ b/style.css
@@ -138,7 +138,6 @@ li > a:link {
 .resume-section {
     display: grid;
     grid-template-columns: 2fr 2fr 4fr 4fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
     row-gap: 8px;
 }
 
